@@ -2,7 +2,7 @@
 
 Use this file as a skeleton for your own tests
 
-$Id: testATNewsItem.py,v 1.7 2004/06/13 21:49:19 tiran Exp $
+$Id: testATNewsItem.py,v 1.8 2004/06/24 19:47:12 tiran Exp $
 """
 
 __author__ = 'Christian Heimes'
@@ -50,6 +50,8 @@ class TestSiteATNewsItem(ATCTSiteTestCase):
         description = old.Description()
         mod         = old.ModificationDate()
         created     = old.CreationDate()
+        
+        time.sleep(1.5)
 
         # migrated (needs subtransaction to work)
         get_transaction().commit(1)
@@ -58,9 +60,8 @@ class TestSiteATNewsItem(ATCTSiteTestCase):
 
         migrated = getattr(self._portal, id)
 
-        self.compareAfterMigration(migrated)
-        self.compareDC(migrated, title=title, description=description, mod=mod,
-                       created=created)
+        self.compareAfterMigration(migrated, mod=mod, created=created)
+        self.compareDC(migrated, title=title, description=description)
                        
         # XXX more
 
@@ -77,12 +78,7 @@ class TestATNewsItemFields(ATCTFieldTestCase):
 
     def afterSetUp(self):
         ATCTFieldTestCase.afterSetUp(self)
-        self._dummy = ATNewsItem.ATNewsItem(oid='dummy')
-        self._dummy.initializeArchetype()
-        # wrap dummy object in the acquisition context of the site
-        site = self.getPortal()
-        self._dummy = self._dummy.__of__(site)
-        # more
+        self._dummy = self.createDummy(klass=ATNewsItem.ATNewsItem)
 
     def test_textField(self):
         dummy = self._dummy
